[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap =  { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
flate2 = "1.0.34"                                # compression
log = "0.4.27"
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling
